# TempoTrack

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
docker_compose/: .env.example  app.yaml  bot.yaml  celery_beat.yaml  celery_worker.yaml  redis.yaml  storage.yaml  test_storage.yaml
src/application/dto/: login.py  register.py  schedule.py  user.py
src/application/exceptions/: auth.py  permissions.py  schedule.py  schedule_items.py  schedule_notifications.py  validation.py  verify.py
src/application/ports/: telegram_indetify_storage.py  telegram_sender.py  verification_code_storage.py
src/application/services/: jwt_service.py  password_service.py  refresh_token_service.py
src/application/usecases/: add_item_schedule.py  create_schedule.py  generate_schedule_notifications.py  get_me_usecase.py  get_my_schedules.py  link_telegram_account_database.py  login_user.py  prepare_schedule_notification.py  register_user.py  send_schedule_notification.py  (+3 more)
src/infrastructure/: container.py
src/migrations/: env.py
tests/: conftest.py
tests/db/: test_models_inspector.py  test_schedule_model.py  test_scheduleitems_models.py  test_table_manager.py  test_user_model.py
tests/entities/: test_schedule_entity.py  test_scheduleitems_entity.py  test_user_entity.py
tests/security/: test_password.py
tests/services/: test_jwt_service.py
tests/usecases/: test_create_schedule.py  test_generate_schedule_notification.py  test_prepare_schedule_notification.py  test_register_user.py  test_send_schedule_notification.py
(+99 files in other folders)
